front-end & deployment

--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -20,8 +20,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        proxy_read_timeout 900s;      # 15分钟读取超时
+        proxy_send_timeout 900s;     # 15分钟发送超时
+        proxy_connect_timeout 75s;   # 连接超时
+        send_timeout 900s;           # 15分钟发送超时
     }
 
     # 用户 API 代理
@@ -35,8 +37,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        proxy_read_timeout 900s;      # 15分钟读取超时
+        proxy_send_timeout 900s;     # 15分钟发送超时
+        proxy_connect_timeout 75s;    # 连接超时
+        send_timeout 900s;            # 15分钟发送超时
     }
 
     # Swagger 文档
